--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,11 +1,11 @@
-#page-header {
+.page-header {
   background-color: var(--header-woliver);
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
 }
 
-#page-header img {
+.page-header img {
   margin: 0.5rem auto;
   height: 6rem;
 }
