--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,11 +1,11 @@
 .page-header {
   background-color: var(--header-woliver);
   display: flex;
-  align-items: center;
+  justify-content: center;
   margin-bottom: 1rem;
 }
 
 .page-header img {
-  margin: 0.5rem auto;
+  margin-top: 1rem;
   height: 6rem;
 }
